--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
-body {font-family: 'Roboto';
+body {font-family: 'Roboto',sans-serif;
+        font-family: 'Raleway',sans-serif;
+        font-family: 'Arial',sans-serif;
+        font-family: 'Play fair',sans-serif;
                  }
+                
 
 .logo {
         color: #2196F3;
